--- a/storybook/storybook-webcomponents/stories/Introduction.stories.mdx
+++ b/storybook/storybook-webcomponents/stories/Introduction.stories.mdx
@@ -116,6 +116,9 @@ import StackAlt from './assets/stackalt.svg';
 
 # Welcome to Storybook
 
+Das ist die Storybook-Page in der die Web-Komponenten des Kurses Web Engineering im Master Informatik vorgestellt werden. Anschließend finden Sie die Informationen zu Storybook, die standardmäßig in einem Projekt generiert werden.
+Die Storybook-Page mit den in Vue entwickelten Komponenten finden Sie unter https://awesome-galileo-38ad20.netlify.app/.
+
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
 
