--- a/storybook/storybook-vue/src/stories/Introduction.stories.mdx
+++ b/storybook/storybook-vue/src/stories/Introduction.stories.mdx
@@ -8,7 +8,7 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
-<Meta title="Example/Introduction" />
+<Meta title="WEM/Introduction" />
 
 <style>{`
   .subheading {
@@ -115,6 +115,9 @@ import StackAlt from './assets/stackalt.svg';
 `}</style>
 
 # Welcome to Storybook
+
+Das ist die Storybook-Page in der die Vue-Komponenten des Kurses Web Engineering im Master Informatik vorgestellt werden. Anschließend finden Sie die Informationen zu Storybook, die standardmäßig in einem Projekt generiert werden.
+Die Storybook-Page mit den nicht in Vue entwickelten Komponenten finden Sie unter https://unruffled-swartz-982d8c.netlify.app/.
 
 Storybook helps you build UI components in isolation from your app's business logic, data, and context.
 That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
